@@ -600,7 +600,7 @@ gam.fit4 <- function(x, y, sp, Eb,UrS=list(),
 
    names(coef) <- xnames
    names(residuals) <- ynames
-   wtdmu <- sum(weights * y)/sum(weights)
+   wtdmu <- sum(weights * mu)/sum(weights) ## changed from y
    nulldev <- sum(dev.resids(y, rep(wtdmu,length(y)), weights))
    n.ok <- nobs - sum(weights == 0)
    nulldf <- n.ok
